hide old posts, add telegra.ph copies, update logo

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ kramdown:
     extensions: fenced_code_blocks
 
 markdown: kramdown
-permalink: /:title/
+permalink: /:year-:month-:day-:title/
 
 plugins:
   - jemoji
